6547500: 2/2 j.l.i.: .retransformClasses throws unexpected InternalError

RetransformClasses() should catch both an empty classes array and a classes array that contains a NULL element.

Reviewed-by: ohair, sspitsyn